# procXD

./: .gitignore  README.md  config_vis.py  create_csv.py  data.csv  docu.md  graph_vis.py  multigraph.py  networkx_vis.py  proc_vis.py  pyproject.toml
procXD/: sketch_builder.py
results/: cardiod.excalidraw  cardiod.excalidraw.excalidraw  config_comparison.excalidraw  config_comparison.excalidraw.excalidraw  configuration.excalidraw  configuration.excalidraw.excalidraw  graph-bip.excalidraw  graph-bip.excalidraw.excalidraw  graph-circular.excalidraw  graph-circular.excalidraw.excalidraw  graph-fr.excalidraw  graph-fr.excalidraw.excalidraw  graph-kk.excalidraw  graph-kk.excalidraw.excalidraw  graph-random.excalidraw  graph-random.excalidraw.excalidraw  graph-shell.excalidraw  graph-shell.excalidraw.excalidraw  graph-spectral.excalidraw  graph-spectral.excalidraw.excalidraw  graph-spiral.excalidraw  graph-spiral.excalidraw.excalidraw  graph-spring.excalidraw  graph-spring.excalidraw.excalidraw  graph.excalidraw.excalidraw  network.excalidraw.excalidraw  tree.excalidraw  tree.excalidraw.excalidraw
