[tool.poetry]
name = "procxd"
version = "0.1.0"
description = "A tool for making excalidraw figures procedurally from python"
authors = ["limex <guebosch@gmail.com>"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pillow = "^9.5.0"
networkx = "^3.2.1"
yacs = "^0.1.8"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
